--- a/attendence/attendence_employee.html
+++ b/attendence/attendence_employee.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Attendance - Employee</title>
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../system_dashboard/styles.css">
     <link rel="stylesheet" href="attendance.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
         <div class="nav-left">
             <div class="company-logo">Company Logo</div>
             <div class="nav-tabs">
-                <button class="nav-tab" data-tab="employees" onclick="window.location.href='../index.html'">Employees</button>
+                <button class="nav-tab" data-tab="employees" onclick="window.location.href='../system_dashboard/index.html'">Employees</button>
                 <button class="nav-tab active" data-tab="attendance">Attendance</button>
                 <button class="nav-tab" data-tab="timeoff">Time Off</button>
             </div>
