--- a/timeoff/timeoff_admin.html
+++ b/timeoff/timeoff_admin.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Attendance - Admin/HR Officer</title>
+    <title>Time Off - Admin/HR</title>
     <link rel="stylesheet" href="../system_dashboard/styles.css">
-    <link rel="stylesheet" href="attendance.css">
+    <link rel="stylesheet" href="timeoff.css">
 </head>
 <body>
     <!-- Top Navigation Bar -->
@@ -14,8 +14,8 @@
             <div class="company-logo">Company Logo</div>
             <div class="nav-tabs">
                 <button class="nav-tab" data-tab="employees" onclick="window.location.href='../system_dashboard/index.html'">Employees</button>
-                <button class="nav-tab active" data-tab="attendance">Attendance</button>
-                <button class="nav-tab" data-tab="timeoff">Time Off</button>
+                <button class="nav-tab" data-tab="attendance" onclick="window.location.href='../attendence/attedence_admin.html'">Attendance</button>
+                <button class="nav-tab active" data-tab="timeoff">Time Off</button>
             </div>
         </div>
         <div class="nav-right">
@@ -53,42 +53,49 @@
 
     <!-- Main Content Area -->
     <main class="main-content">
-        <div class="attendance-header">
-            <h1 class="attendance-title">Attendance</h1>
-            
-            <div class="attendance-controls">
-                <div class="date-navigation">
-                    <button class="nav-arrow" id="prevDateBtn">←</button>
-                    <button class="date-selector" id="dateSelector">
-                        <span id="selectedDate">22, October 2025</span>
-                        <span class="dropdown-icon">▼</span>
-                    </button>
-                    <button class="nav-arrow" id="nextDateBtn">→</button>
-                </div>
-                <button class="day-btn" id="dayBtn">Day</button>
+        <div class="timeoff-header">
+            <div class="timeoff-subtabs">
+                <button class="subtab active" data-subtab="timeoff">Time Off</button>
+                <button class="subtab" data-subtab="allocation">Allocation</button>
+            </div>
+            <div class="timeoff-actions">
+                <button class="new-btn" id="newBtn">NEW</button>
+                <input type="text" class="search-bar-inline" placeholder="Search" id="searchBar">
             </div>
         </div>
 
-        <!-- Attendance Table -->
-        <div class="attendance-table-container">
-            <table class="attendance-table">
+        <!-- Summary Statistics -->
+        <div class="timeoff-stats">
+            <div class="stat-card-timeoff">
+                <div class="stat-label-timeoff">Paid time Off</div>
+                <div class="stat-value-timeoff" id="paidTimeOffAvailable">24 Days Available</div>
+            </div>
+            <div class="stat-card-timeoff">
+                <div class="stat-label-timeoff">Sick time off</div>
+                <div class="stat-value-timeoff" id="sickTimeOffAvailable">07 Days Available</div>
+            </div>
+        </div>
+
+        <!-- Time Off Table -->
+        <div class="timeoff-table-container">
+            <table class="timeoff-table">
                 <thead>
                     <tr>
-                        <th>Emp</th>
-                        <th>Check In</th>
-                        <th>Check Out</th>
-                        <th>Work Hours</th>
-                        <th>Extra hours</th>
+                        <th>Name</th>
+                        <th>Start Date</th>
+                        <th>End Date</th>
+                        <th>Time off Type</th>
+                        <th>Status</th>
                     </tr>
                 </thead>
-                <tbody id="attendanceTableBody">
-                    <!-- Attendance data will be dynamically generated -->
+                <tbody id="timeoffTableBody">
+                    <!-- Time off data will be dynamically generated -->
                 </tbody>
             </table>
         </div>
     </main>
 
-    <script src="attendance_admin.js"></script>
+    <script src="timeoff_admin.js"></script>
 </body>
 </html>
 
